les images et la page d'accueil

--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
 
     <div class="untree_co-section pb-0" id="about-section">
       <div class="container">
-        <div class="row justify-content-center mb-3">
+        <div class="row justify-content-center mb-3"> 
           <div class="col-lg-7 mx-auto text-center author-wrap">
             <img src="images/person_1.jpg" alt="Image" class="img-fluid rounded-circle mb-3">
             <h3 class="text-black h5 font-weight-bold mb-2 gsap-reveal-hero">Benji Mawax</h3>
@@ -332,7 +332,7 @@
         <div class="row mb-4">
           <div class="col-lg-7 text-center mx-auto">
             <h2 class="section-heading gsap-reveal-hero mb-0"><strong>Mes services</strong></h2>
-            <p class="gsap-reveal-hero">The Big Oxmox advised her not to do so, because there were thousands of bad Commas.</p>
+            <p class="gsap-reveal-hero">Mon portfolio met en avant ma polyvalence dans le design, le marketing, le développement d'applications et la gestion de marques.</p>
             <div class="wave gsap-reveal-hero" >
               <svg>
                 <path d="M10,10 L50,100 L90,50" stroke="#0389ff"></path>
@@ -349,7 +349,7 @@
                 <span class="icon-service"><img src="images/svg/service-icon-7.svg" alt="Image" class="img-fluid"></span>
               </div>
               <h3 class="gsap-reveal-hero">Marketing</h3>
-              <p class="gsap-reveal-hero">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+              <p class="gsap-reveal-hero">Le marketing est la promotion et la vente de produits ou services.</p>
             </div>
           </div>
           <div class="col-6 col-sm-6 col-md-6 col-lg-4 mb-4">
@@ -357,8 +357,8 @@
               <div class="gsap-reveal-hero mb-3">
                 <span class="icon-service"><img src="images/svg/service-icon-6.svg" alt="Image" class="img-fluid"></span>
               </div>
-              <h3 class="gsap-reveal-hero">Photography</h3>
-              <p class="gsap-reveal-hero">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+              <h3 class="gsap-reveal-hero">Photographie</h3>
+              <p class="gsap-reveal-hero">La photographie est l'art de capturer des images avec de la lumière.</p>
             </div>
           </div>
 
@@ -368,7 +368,7 @@
                 <span class="icon-service"><img src="images/svg/service-icon-1.svg" alt="Image" class="img-fluid"></span>
               </div>
               <h3 class="gsap-reveal-hero">Web Design</h3>
-              <p class="gsap-reveal-hero">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+              <p class="gsap-reveal-hero">Le web design consiste à concevoir des sites web.</p>
             </div>
           </div>
 
@@ -379,7 +379,7 @@
                 <span class="icon-service"><img src="images/svg/service-icon-8.svg" alt="Image" class="img-fluid"></span>
               </div>
               <h3 class="gsap-reveal-hero">App Development</h3>
-              <p class="gsap-reveal-hero">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+              <p class="gsap-reveal-hero">La création d'applications, c'est concevoir des logiciels pour des dispositifs.</p>
             </div>
           </div>
 
@@ -389,7 +389,7 @@
                 <span class="icon-service"><img src="images/svg/service-icon-4.svg" alt="Image" class="img-fluid"></span>
               </div>
               <h3 class="gsap-reveal-hero">Search Ranking</h3>
-              <p class="gsap-reveal-hero">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+              <p class="gsap-reveal-hero">Classement de recherche : la position d'un site dans les résultats de recherche.</p>
             </div>
           </div>
 
@@ -399,7 +399,7 @@
                 <span class="icon-service"><img src="images/svg/service-icon-5.svg" alt="Image" class="img-fluid"></span>
               </div>
               <h3 class="gsap-reveal-hero">Branding</h3>
-              <p class="gsap-reveal-hero">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+              <p class="gsap-reveal-hero">Branding : Identité et perception d'une entreprise.</p>
             </div>
           </div>
 
@@ -413,7 +413,7 @@
         <div class="row mb-4">
           <div class="col-lg-7 text-center mx-auto">
             <h2 class="section-heading gsap-reveal-hero mb-0"><strong>Mes compétences</strong></h2>
-            <p class="gsap-reveal-hero">The Big Oxmox advised her not to do so, because there were thousands of bad Commas.</p>
+            <p class="gsap-reveal-hero">Mes compétences en développement web, web design, UI/UX et graphisme couvrent un large éventail de compétences numériques, garantissant des solutions créatives et efficaces pour vos projets.</p>
             <div class="wave gsap-reveal-hero" >
               <svg>
                 <path d="M10,10 L50,100 L90,50" stroke="#0389ff"></path>
@@ -616,20 +616,20 @@
             <form action="https://formspree.io/f/xpzgkljy" method="post">
               <div class="row">
                 <div class="col-lg-6 form-group">
-                  <input type="text" class="form-control" name="name" placeholder="Votre nom">
+                  <input type="text" class="form-control" placeholder="Votre nom">
                 </div>
                 <div class="col-lg-6 form-group">
-                  <input type="text" class="form-control"name="lastename" placeholder="Votre prénom">
+                  <input type="text" class="form-control" placeholder="Votre prénom">
                 </div>
               </div>
               <div class="row">
                 <div class="col-lg-12 form-group">
-                  <input type="email" class="form-control" name="email" placeholder="Adresse email">
+                  <input type="email" class="form-control" placeholder="Adresse email">
                 </div>
               </div>
               <div class="row">
                 <div class="col-lg-12 form-group">
-                  <textarea name="message" id="" cols="30" rows="7" class="form-control" placeholder="Ecrivez votre message..."></textarea>
+                  <textarea name="" id="" cols="30" rows="7" class="form-control" placeholder="Ecrivez votre message..."></textarea>
                 </div>
               </div>
               <div class="row">
@@ -654,14 +654,12 @@
         <div class="row">
           <div class="col-lg-3">
             <div class="widget">
-              <h3>Home</h3>
+              <h3>Accueil</h3>
               <ul class="list-unstyled float-left links">
-                <li><a href="#">Untree.co</a></li>
-                <li><a href="#">About us</a></li>
-                <li><a href="#">Projects</a></li>
+                <li><a href="#">Portfolio</a></li>
+                <li><a href="#">A propos</a></li>
                 <li><a href="#">Services</a></li>
-                <li><a href="#">Terms</a></li>
-                <li><a href="#">Privacy</a></li>
+                <li><a href="#">Contactez-moi</a></li>
               </ul>
             </div> <!-- /.widget -->
           </div> <!-- /.col-lg-3 -->
@@ -670,11 +668,11 @@
             <div class="widget">
               <h3>Projects</h3>
               <ul class="list-unstyled float-left links">
-                <li><a href="#">HTML5</a></li>
-                <li><a href="#">CSS3</a></li>
-                <li><a href="#">Untree.co</a></li>
-                <li><a href="#">Free Templates</a></li>
-                <li><a href="#">WordPress Themes</a></li>
+                <li><a href="#">HTML5/CSS3</a></li>
+                <li><a href="#">PHP</a></li>
+                <li><a href="#">JavaScript</a></li>
+                <li><a href="#">UI/UX</a></li>
+                <li><a href="#">WordPress</a></li>
               </ul>
             </div> <!-- /.widget -->
           </div> <!-- /.col-lg-3 -->
