--- a/index.html
+++ b/index.html
@@ -601,7 +601,7 @@
         <div class="row mb-5">
           <div class="col-lg-7 text-center mx-auto">
             <h2 class="section-heading gsap-reveal-hero mb-0"><strong>Contact</strong></h2>
-            <p class="gsap-reveal-hero">Laissez-nous votre un message !</p>
+            <p class="gsap-reveal-hero">Laissez-moi votre un message !</p>
 
             <div class="wave gsap-reveal-hero" >
               <svg>
