--- a/index.html
+++ b/index.html
@@ -702,7 +702,7 @@
 
               <h3>Mes réseaux</h3>
               <ul class="list-unstyled social">
-                <li><a href="https:/www.facebook.com/benjimawax"><span class="icon-facebook"></span></a></li>
+                <li><a href="https://www.facebook.com/benjimawax"><span class="icon-facebook"></span></a></li>
                 <li><a href="https://github.com/b1jimawax/"><span class="icon-git"></span></a></li>
                 <li><a href="https://www.pinterest.com/benjimawax/"><span class="icon-pinterest"></span></a></li>
               </ul>
