Le téléchargement du cv

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           <li><a href="#portfolio-section" class="nav-link">Portfolio</a></li>
           <li class="has-children">
             <a href="#about-section" class="nav-link">A propos</a>
-            <ul class="dropdown">
+            <!-- <ul class="dropdown">
               <li><a href="elements.html" class="nav-link">Elements</a></li>
               <li class="has-children">
                 <a href="#">Menu Two</a>
@@ -70,7 +70,7 @@
                 </ul>
               </li>
               <li><a href="#" class="nav-link">Menu Three</a></li>
-            </ul>
+            </ul> -->
           </li>
           <li><a href="#services-section" class="nav-link">Services</a></li>
 
@@ -132,8 +132,8 @@
               <div class="overlay">
                 <span class="wrap-icon icon-link2"></span>
                 <div class="portfolio-item-content">
-                  <h3>Book Binding</h3>
-                  <p>illustration, application</p>
+                  <h3>Branding</h3>
+                  <p>Bannière roblox </p>
                 </div>
               </div>
               <img src="images/img_2.jpg" class="lazyload  img-fluid" alt="Images" />
@@ -145,8 +145,8 @@
               <div class="overlay">
                 <span class="wrap-icon icon-link2"></span>
                 <div class="portfolio-item-content">
-                  <h3>Fresh Fruits</h3>
-                  <p>web, branding</p>
+                  <h3>Branding</h3>
+                  <p>Logo Bakita & frères</p>
                 </div>
               </div>
               <img src="images/img_3.jpg" class="lazyload  img-fluid" alt="Images" />
@@ -158,8 +158,8 @@
               <div class="overlay">
                 <span class="wrap-icon icon-link2"></span>
                 <div class="portfolio-item-content">
-                  <h3>Powerful Speaker</h3>
-                  <p>web, branding</p>
+                  <h3>Branding</h3>
+                  <p>Logo de l'ISTM</p>
                 </div>
               </div>
               <img src="images/img_4.jpg" class="lazyload  img-fluid" alt="Images" />
@@ -198,8 +198,8 @@
               <div class="overlay">
                 <span class="wrap-icon icon-link2"></span>
                 <div class="portfolio-item-content">
-                  <h3>Nike Shoe</h3>
-                  <p>illustration, application</p>
+                  <h3>Visuel</h3>
+                  <p>Carte d'anniversaire</p>
                 </div>
               </div>
               <img src="images/img_7.jpg" class="lazyload  img-fluid" alt="Images" />
@@ -263,8 +263,8 @@
               <div class="overlay">
                 <span class="wrap-icon icon-link2"></span>
                 <div class="portfolio-item-content">
-                  <h3>Beautiful Woman</h3>
-                  <p>web, branding</p>
+                  <h3>Web design</h3>
+                  <p>Maquettage de W3C</p>
                 </div>
               </div>
               <img src="images/img_12.jpg" class="lazyload  img-fluid" alt="Images" />
@@ -320,7 +320,7 @@
             <p class="gsap-reveal-hero mb-5">Pour moi, l'informatique n'est pas seulement mon présent, c'est l'avenir que je souhaite forger. Mon objectif professionnel est de continuer à grandir en tant que développeur front-end et designer graphique, en acquérant de nouvelles compétences, en restant au fait des dernières tendances technologiques et en relevant de nouveaux défis. Je suis déterminé à créer des expériences exceptionnelles et à faire ma part pour façonner le futur du numérique.</p> -->
 
 
-            <p class="gsap-reveal-hero text-center"><a href="#" target="_blank" class="btn btn-outline-black">Téléchagez mon CV</a></p>    
+            <p class="gsap-reveal-hero text-center"><a href="images/MonCVSept2023.pdf" download target="_blank" class="btn btn-outline-black">Téléchagez mon CV</a></p>    
           </div>
         </div>
       </div>
