--- a/index.html
+++ b/index.html
@@ -696,7 +696,7 @@
               <address>ENS -Libreville - Gabon </address>
               <ul class="list-unstyled links mb-4">
                 <li><a href="tel://077582104">+241(00)-77-582-104</a></li>
-                <li><a href="tel://066948438">+241(00)-66-948-438</a></li>
+                <li><a href="https://api.whatsapp.com/send?phone=241066948438">+241(00)-66-948-438</a></li>
                 <li><a href="mailto:benjimawax04@gmail.com">benjimawax04@gmail.com</a></li>
               </ul>
 
