--- a/index.html
+++ b/index.html
@@ -616,20 +616,20 @@
             <form action="https://formspree.io/f/xpzgkljy" method="post">
               <div class="row">
                 <div class="col-lg-6 form-group">
-                  <input type="text" class="form-control" placeholder="Votre nom">
+                  <input type="text" name="name" id="name" class="form-control" placeholder="Votre nom">
                 </div>
                 <div class="col-lg-6 form-group">
-                  <input type="text" class="form-control" placeholder="Votre prénom">
+                  <input type="text" name="prenom" id="prenom" class="form-control" placeholder="Votre prénom">
                 </div>
               </div>
               <div class="row">
                 <div class="col-lg-12 form-group">
-                  <input type="email" class="form-control" placeholder="Adresse email">
+                  <input name="Email" id="email" type="email" class="form-control" placeholder="Adresse email">
                 </div>
               </div>
               <div class="row">
                 <div class="col-lg-12 form-group">
-                  <textarea name="" id="" cols="30" rows="7" class="form-control" placeholder="Ecrivez votre message..."></textarea>
+                  <textarea name="comment" id="comment" type="text" cols="30" rows="7" class="form-control" placeholder="Ecrivez votre message..."></textarea>
                 </div>
               </div>
               <div class="row">
