--- a/index.html
+++ b/index.html
@@ -309,11 +309,11 @@
           <div class="col-lg-7">
 
 
-            <p class="gsap-reveal-hero">Je suis MBA ALLOGO OBAME Fidèle-Benjamin, mais vous pouvez m'appeler BENJIMAWAX. Je suis un jeune Gabonais de 25 ans, et je suis passionné par le monde de l'informatique. Je me spécialise en développement front-end et en design graphique. Mon parcours professionnel et ma vision du futur professionnel sont intimement liés à cet univers captivant.</p>
+            <p class="gsap-reveal-hero">Je suis MBA ALLOGO OBAME Fidèle-Benjamin, mais vous pouvez m'appeler BENJIMAWAX. Je suis un jeune Gabonais de 25 ans, et je suis passionné par le monde de l'informatique. Je me spécialise en développement web et en design graphique. Mon parcours professionnel et ma vision du futur professionnel sont intimement liés à cet univers captivant.</p>
 
             <p class="gsap-reveal-hero">Le développement front-end est bien plus qu'une simple compétence pour moi, c'est une véritable passion. Travailler avec des langages tels que HTML, CSS, JavaScript, et utiliser des frameworks tels que React ou Vue.js pour créer des expériences web dynamiques est non seulement gratifiant, mais aussi une source d'inspiration constante. Chaque projet est une opportunité de créer quelque chose de beau et de fonctionnel, et c'est ce qui me motive chaque jour.</p>
 
-            <p class="gsap-reveal-hero">En tant que designer graphique, je suis également un amoureux de l'esthétique et de la créativité. Mon approche du design est centrée sur l'harmonie visuelle, la convivialité et la narration. Je crois fermement que le design est bien plus qu'une simple esthétique ; c'est une composante essentielle de toute expérience utilisateur réussie. Mes compétences en design graphique vont de la création d'interfaces utilisateur intuitives à la conception de logos et d'éléments visuels percutants.</p>
+            <p class="gsap-reveal-hero">En tant que designer graphique, je suis également un amoureux de l'esthétique et de la créativité. Mon approche du design est centrée sur l'harmonie visuelle, la convivialité et la narration. Je crois fermement que le design est bien plus qu'une simple esthétique ; c'est une composante essentielle de toute expérience utilisateur réussie. Mes compétences en design graphique vont de la création d'interfaces utilisateur intuitives à la conception de logos.</p>
 
             <!-- <p class="gsap-reveal-hero">L'informatique ne se limite pas à une simple carrière pour moi, c'est un mode de vie. C'est une source d'inspiration inépuisable qui me pousse à repousser les limites de ma créativité et de mes compétences techniques. J'aspire à contribuer de manière significative au monde numérique en créant des solutions innovantes qui améliorent la vie des utilisateurs, qu'il s'agisse de sites web interactifs, d'applications mobiles ou de matériel promotionnel.</p>
 
@@ -484,7 +484,7 @@
               <div class="testimonial-v1">
                 <img src="images/person_1.jpg" alt="Image" class="img-fluid">
                 <div class="mb-4">
-                  <h3>James Smith</h3>
+                  <h3>Laura annelys</h3>
                   <span class="caption">CEO &amp; Co-Founder</span>
                 </div>
                 <blockquote>
@@ -498,11 +498,11 @@
               <div class="testimonial-v1">
                 <img src="images/person_2.jpg" alt="Image" class="img-fluid">
                 <div class="mb-4">
-                  <h3>Jenny Wilson</h3>
+                  <h3>Berni Mathieu</h3>
                   <span class="caption">CEO &amp; Co-Founder</span>
                 </div>
                 <blockquote>
-                  <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+                  <p>J'ai été entièrement satisfaite de la conception de mon portfolio, car grâce à ce dernier, j'ai pu obtenir plusieurs contrats qui m'ont permis de gérer des projets sur le plan national et international.</p>
                 </blockquote>
               </div>
             </div>
@@ -512,7 +512,7 @@
               <div class="testimonial-v1">
                 <img src="images/person_3.jpg" alt="Image" class="img-fluid">
                 <div class="mb-4">
-                  <h3>Dan Anderson</h3>
+                  <h3>Lucette firmine</h3>
                   <span class="caption">CEO &amp; Co-Founder</span>
                 </div>
                 <blockquote>
@@ -526,11 +526,11 @@
               <div class="testimonial-v1">
                 <img src="images/person_1.jpg" alt="Image" class="img-fluid">
                 <div class="mb-4">
-                  <h3>James Smith</h3>
+                  <h3>Sterlant</h3>
                   <span class="caption">CEO &amp; Co-Founder</span>
                 </div>
                 <blockquote>
-                  <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+                  <p>La création de mon site web par benji a été un investissement qui a porté ses fruits. Non seulement le design est époustouflant, mais la fonctionnalité et l'ergonomie ont vraiment mis en valeur mes services.</p>
                 </blockquote>
               </div>
             </div>
